# caraka-dekstop

./: .gitignore  CARAKA_Proposal_Final.docx  Format Proposal Fix.docx  Format Proposal Implementasi Kriptografi.docx  GEMINI.md  KRIPTOGRAFI_CARAKA.md  PROPOSAL_CARAKA_v2.html  Proposal CARAKA Desktop.docx  README.md  caraka_research_report.md  caraka_whitepaper_draft by gemini  caraka_whitepaper_draft.md  generate_proposal.py  inspect_old.py  launch_two_instances.ps1  package-lock.json  package.json  ~$oposal CARAKA Desktop.docx
.github/workflows/: release.yml
docs/: 01_PROJECT_PROPOSAL.md  02_TECHNICAL_DESIGN.md  03_DEVELOPMENT_GUIDE.md  CLAMP-SPEC.md  PROPOSAL_TUGAS_AKHIR.md
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  discovery.rs  file_transfer.rs  hotspot.rs  keys.rs  lib.rs  main.rs  network_monitor.rs  packet.rs  routing.rs  state.rs  store.rs  sync.rs  tor.rs  transport.rs  vault.rs
src/styles/: main.css
