[package]
name = "caraka-desktop"
version = "0.1.0"
edition = "2021"
description = "Secure Offline Mesh Communication Powered by Lightweight Cryptography"
authors = ["CARAKA Team"]

[lib]
name = "caraka_desktop_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── KRIPTOGRAFI ─────────────────────────────────────────────
# Ascon-AEAD128: enkripsi E2EE payload (NIST SP 800-232)
ascon-aead  = { version = "0.4" }
# Argon2id: KDF untuk vault passphrase (OWASP 2024 recommended)
argon2      = "0.5"
# X25519: key exchange ECDH untuk identitas node dan DM-Key  
x25519-dalek = { version = "2", features = ["static_secrets"] }
# HKDF-SHA256: Key Derivation Function (RFC 5869)
hkdf        = "0.12"
sha2        = "0.10"
# Hex encoding untuk Node ID
hex         = "0.4"
# Cryptographically secure random number generator
rand        = { version = "0.8", features = ["std"] }
# Automatic zeroing of key material from memory when dropped
zeroize     = { version = "1", features = ["derive"] }

# ── JARINGAN ────────────────────────────────────────────────
tokio       = { version = "1", features = ["full"] }
# Iterasi network interface untuk subnet broadcast discovery (fix Windows 255.255.255.255)
get_if_addrs = "0.5"

# ── STORAGE ─────────────────────────────────────────────────
rusqlite    = { version = "0.32", features = ["bundled"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
bincode     = "1"

# ── UTILITIES ───────────────────────────────────────────────
lru         = "0.12"
thiserror   = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow      = "1"
uuid        = { version = "1", features = ["v4"] }
# BUG #5: Secure storage untuk private key (Windows Credential Manager)
keyring     = "2"
# FITUR 4A: QR code generation untuk peer discovery
qrcode      = "0.14"
image       = { version = "0.25", default-features = false, features = ["png"] }
base64      = "0.22"

# ── TOR TRANSPORT (F0) ──────────────────────────────────────
# arti — pure Rust Tor client. default-features=false → drop openssl/native-tls
# (wajib di Windows agar tidak perlu OpenSSL/perl).
arti-client = { version = "0.43.0", default-features = false, features = ["tokio", "rustls", "onion-service-service", "onion-service-client", "compression"] }
tor-rtcompat = { version = "0.43.0", default-features = false, features = ["tokio", "rustls"] }
tor-hsservice = "0.43.0"         # OnionServiceConfigBuilder, handle_rend_requests
tor-cell      = "0.43.0"         # Connected (untuk StreamRequest::accept)
safelog       = "0.8"            # DisplayRedacted untuk ambil string .onion dari HsId
futures       = "0.3"            # StreamExt di accept loop
# rustls CryptoProvider harus dipasang sebelum bootstrap Tor
rustls        = { version = "0.23", features = ["ring"] }

# ── TAURI ───────────────────────────────────────────────────
tauri       = { version = "2", features = [] }
tauri-plugin-shell = "2"

[dev-dependencies]
criterion   = { version = "0.5", features = ["html_reports"] }

# [[bench]] diaktifkan di Fase 7
# [[bench]]
# name    = "crypto_bench"
# harness = false
